# llm.speech

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  app.py  generation.ipynb  hf-upload.py  pyproject.toml
configs/: mamba-small.yaml  medium.yaml  small-expresso-finetune.yaml  small.yaml
notebooks/: generation.ipynb  snac.ipynb
scripts/: preprocess-expresso.py  preprocess-mls-eng.py
src/llmspeech/: audio.py  config.py  dataset.py  generation.py  hacking.ipynb  model.py  preprocess.py  text.py  train.py  utils.py
